--- a/shopify.app.shop-chat-agent-v2.toml
+++ b/shopify.app.shop-chat-agent-v2.toml
@@ -1,9 +1,9 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-client_id = "b45c2aafb2d9218bbc86fb5cdb97a13a"
-name = "shop-chat-agent-v3"
-handle = "shop-chat-agent-v3-1"
-application_url = "https://localhost:3458"
+client_id = "622c77ce583b8e4ad6882b8d813ae0d4"
+name = "shop-chat-agent-v2"
+handle = "shop-chat-agent-v2-1"
+application_url = "https://example.com/"
 embedded = true
 
 [build]
@@ -17,11 +17,7 @@ api_version = "2025-04"
 scopes = "customer_read_customers,customer_read_orders,customer_read_store_credit_account_transactions,customer_read_store_credit_accounts,unauthenticated_read_product_listings"
 
 [auth]
-redirect_urls = [
-  "https://localhost:3458/auth/callback",
-  "https://localhost:3458/auth/shopify/callback",
-  "https://localhost:3458/api/auth/callback"
-]
+redirect_urls = [ "https://example.com/api/auth" ]
 
 [pos]
 embedded = false
